fix button squish

--- a/styles/message-input.module.scss
+++ b/styles/message-input.module.scss
@@ -28,6 +28,8 @@
         svg {
             fill: var(--primary-color);
             stroke: none;
+            min-width: 30px;
+            min-height: 30px;
         }
     }
 }
